--- a/src/main/resources/templates/editorial/formulario_editorial.html
+++ b/src/main/resources/templates/editorial/formulario_editorial.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Formulario de Categorias</title>
+    <title>Formulario de Editorial</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
     <body>
@@ -28,17 +28,19 @@
             </div>
         </nav>
 
-            <div class="container mt-4">
-                <h2>Formulario de Categoria</h2>
-                <form th:action="@{/categorias/guardar}" method="post">
-                    <input type="hidden" id="id" name="id" th:value="${categoria.id}">
+        <div class="container mt-5">
+            <h2>Formulario de Editorial</h2>
+            <form th:action="@{/editoriales/guardar}" method="post">
+                <input type="hidden" id="id" name="id" th:value="${editorial.id}">
 
-                        <div class="form-group">
-                            <label for="nombre">Nombre: </label>
-                            <input th:field="${categoria.nombre}" type="text" class="form-control" id="nombre" name="nombre" required>
-                        </div>
-                    <button type="submit" class="btn btn-primary">Guardar</button>
-                </form>
-            </div>
+                <div class="form-group">
+                    <label for="nombre">Nombre: </label>
+                    <input type="text" th:value="${editorial.nombre}" class="form-control" id="nombre" name="nombre" >
+                </div>
+
+                <input type="submit" class="btn btn-primary" value="Guardar">
+                <!--<button type="submit" class="btn btn-primary">Guardar</button>-->
+            </form>
+        </div>
     </body>
 </html>
