--- a/src/main/resources/templates/editorial/mostrar_libros_editorial.html
+++ b/src/main/resources/templates/editorial/mostrar_libros_editorial.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Listado de categorias</title>
+    <title>Libros de Editoriales</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
     <body>
@@ -28,31 +28,26 @@
             </div>
         </nav>
 
-            <div class="container mt-4">
-                <h1>Listado de Categorias</h1>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Nombre</th>
-                            <th>Acciones</th>
-                        </tr>
-                    </thead>
+        <div class="container mt-4">
+            <h2>Libros de Editorial</h2>
+            <p>ID de editorial: <span th:text="${editorial.id}"></span></p>
+            <p>Nombre de editorial: <span th:text="${editorial.nombre}"></span></p>
+            <table class="table table-striped">
+                <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Titulo</th>
+                </tr>
+                </thead>
 
-                    <tbody>
-                        <tr th:each="categoria : ${categorias}">
-                            <td th:text="${categoria.id}"></td>
-                            <td th:text="${categoria.nombre}"></td>
-                            <td>
-                                <a th:href="@{/categorias/{id}/editar(id= ${categoria.id})}" class="btn btn-primary btn-sm">Editar</a>
-                                <a th:href="@{/categorias/{id}/eliminar(id=${categoria.id})}" class="btn btn-danger btn-sm">Eliminar</a>
-
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-
-                <a href="/categorias/nuevo" class="btn btn-success">Agregar categoria</a>
-            </div>
+                <tbody>
+                <tr th:each="libro : ${libros}">
+                    <td th:text="${libro.id}"></td>
+                    <td th:text="${libro.titulo}"></td>
+                </tr>
+                </tbody>
+            </table>
+            <a href="/editoriales/listar" class="btn btn-secondary">Volver</a>
+        </div>
     </body>
 </html>
