--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,5 +28,51 @@
             </div>
     </nav>
 
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Libros</h5>
+                        <p class="card-text">Ver y administrar libros</p>
+                        <a href="/libros/" class="btn btn-primary">Ir a libros</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Categorias</h5>
+                        <p class="card-text">Ver y administrar categorias</p>
+                        <a href="/categorias/" class="btn btn-primary">Ir a categorias</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Autores</h5>
+                        <p class="card-text">Ver y administrar autores</p>
+                        <a href="/autores/" class="btn btn-primary">Ir a autores</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Categorias</h5>
+                        <p class="card-text">Ver y administrar categorias</p>
+                        <a href="/autores/" class="btn btn-primary">Ir a categorias</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
 </body>
 </html>
